--- a/src/pages/marketplace/Marketplace.css
+++ b/src/pages/marketplace/Marketplace.css
@@ -27,7 +27,7 @@
   justify-content: center;
   color: white;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 170px;
 }
 
 .hero-content h1 {
